aws-vpc-t2-wordpress/vpc.tf
resource "aws_vpc" "wordpress" {
    cidr_block = "${var.vpc_cidr_block}"
    enable_dns_hostnames = true
    tags {
        Name = "Wordpress VPC"
    }
}
